tests/golden/error/import_duplicate/main.tg
// Test: importing the same name twice produces E0007.

pub mod mymod;

use mymod::Foo;
use mymod::Foo;

fn main() -> Nat { 0 }
